--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "bootstrap": "^4.6.2"
+        "bootstrap": "^4.6.2",
+        "bootstrap-icons": "^1.10.3"
     }
 }
